r117 - october, 8, 2009
    * /doc/UPDATE-FR : new file
    * /data/updates/1.1-to-1.1.1 : new folder
    * /data/updates/1.1-to-1.1.1/r117.sql : new file
    * /config/databases.yml : added to svn:ignore
    * /apps/front/config/settings.yml : Google Map Key has been removed (put
      into the database)
    * layout.php : new menu entry (install and update)


r116 - october, 8, 2009
    * README-FR has been updated
    * TROUBLESHOOTING-FR has been updated
    * mailing module has been removed because empty
    * databases.yml : fixed wrong encoding value for 'all'
    * Association : actions > executeMailing() > missing attributes 
      $associationId has been added when calling 'Configurator::get()'
    * /doc/piwam-install.sql : collation and charset for piwam_data has been
      set explicitely


r115 - october, 6, 2009
    * Edited 'installerPiwam' wiki page through web user interface.


r114 - october, 6, 2009
    * Edited 'installerPiwam' wiki page through web user interface.


r113 - october, 1, 2009
    * Piwam 1.1


r112 - september, 16, 2009
    * update : actions > executePerform > if it works we clear the cache
    * /web/cache_error.php : new file, user friendly error message when cache
      folder is not writable
    * /web/index.php : cache_error.php is displayed if we catch a
      sfCacheException
    * /apps/front/config/error/error_html.php : user friendly error message is
      displayed if an exception occurs


r111 - september, 16, 2009
    * Piwam 1.1 RC2


r110 - september, 16, 2009
    * /doc/piwam-install.sql : piwam_data > dbversion has been updated


r109 - september, 15, 2009
    * Piwam 1.1 RC1


r108 - september, 15, 2009
    * TROUBLESHOOTING-FR : a few words about /update and about Google API key
    * README-FR : a part has been added about Google API key
    * association : loginSuccess.php > warning message has been replaced by a
      welcome message


r107 - september, 15, 2009
    * form.css : custom .button class